@@ -33,6 +33,9 @@ import cascading.tuple.Tuples;
 /**
  * The Identity function simply passes incoming arguments back out again. Optionally argument fields can be renamed, and/or
  * coerced into specific types.
+ * <p/>
+ * During coercion, if the given type is a primitive ({@code long}), and the tuple value is null, {@code 0} is returned.
+ * If the type is an Object ({@code java.lang.Long}), and the tuple value is {@code null}, {@code null} is returned.
  */
 public class Identity extends BaseOperation<Tuple> implements Function<Tuple>
   {
