@@ -2,6 +2,9 @@ Cascading Change Log
 
 2.1.0 [unreleased]
 
+  Fixed issue where c.p.a.Coerce would coerce a null value to 0 if the coerce type was a j.l.Number
+  instead of a numeric primitive, or false if the coerce type was j.l.Boolean instead of boolean.
+
   Fixed issue where c.s.u.DelimitedParser did not honor number of field found in a text delimited file header.
 
   Fixed issue where c.t.Tap#openForWrite did not honor the c.t.SinkMode#REPLACE setting.
